Fixing errors caused by previous overflow changes

--- a/app/_assets/scss/minima/_layout.scss
+++ b/app/_assets/scss/minima/_layout.scss
@@ -83,7 +83,7 @@
 
   .page-header-wrapper {
     position: relative;
-    height: 100%;
+    height: 400px;
 
     .page-header-title {
       position: absolute;
